--- a/src/styles/components/_base.scss
+++ b/src/styles/components/_base.scss
@@ -1,5 +1,6 @@
 html {
     font-size: 62.5%;
+    direction: rtl;
 }
 
 body {
@@ -11,8 +12,8 @@ body {
 
 
 .logo {
-    width: 80px;
-    height: 117.4px;
-    margin-left: 20px;
-    margin-right: 10px;
+    width: 60px;
+    // height: 117.4px;
+    // margin-left: 20px;
+    // margin-right: 10px;
 }
