--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,9 +1,10 @@
 .header {
     border-bottom: 0.5rem solid whitesmoke;
-    height: 148px;
-    width: 100%;
+    // height: 148px;
+    // width: 100%;
+    padding:1rem;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     margin-bottom: 1rem;
 
