--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -3,11 +3,12 @@ input {
     border-color: black;
     border-style: solid;
     border-width: 1px;
-    height: 30px;
-    text-align: end;
+    // height: 30px;
+    font-size: 18px;
+    text-align: right;
     outline: none;
-    padding-right: .5rem;
-
+    padding: 1rem .5rem;
+    // padding-right: .5rem;
 }
 
 input:disabled{
@@ -16,17 +17,21 @@ input:disabled{
 
 .code-input {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     border: 1px solid black;
     border-radius: 6px;
-    height: 30px;
-    padding: 1px 0;
+    
+    // height: 30px;
+    
+    padding: 0.2rem 0;
     align-items: center;
 
     input{
         flex-grow: 2;
         border: none;
+        padding: 0 .5rem;
         width: 65%;
+        outline-color: #2F80ED;
     }
 
     input:focus {
@@ -41,11 +46,31 @@ input:disabled{
         height: 80%; 
         width: 35%;
         margin-left: 1%;
-        font-size: 10px;
+        font-size: 12px;
+        padding: 1rem 0 ;
 
     }
 
     button:disabled {
         background-color: #828282;
+    }
+}
+
+.selected-input {
+    
+    padding: .4rem;
+    background: #2F80ED;
+    color: white;
+    font-size: small;
+    width: fit-content;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 10px;
+    margin-left: .3rem;
+    margin-bottom: .3rem;
+
+    svg{
+        padding-right: 1rem;
     }
 }
